syntax = "proto3";

package src.main.java.com.github.cyberpunkperson.retryer.router;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";


message LoopEntry {

  string application_name = 1;

  string group_id = 2;

  string topic = 3;

  int64 offset = 4;

  int32 partition = 5;

  google.protobuf.Timestamp timestamp = 6;

  bytes key = 7;

  bytes value = 8;

  RetryInterval interval = 9;

  int32 delivery_attempt = 10;

  google.protobuf.Timestamp redelivery_timestamp = 11;

  google.protobuf.Timestamp error_timestamp = 12;

  string error_message = 13;

  message RetryInterval {

    google.protobuf.Duration duration = 1;

    string topic = 2;
  }
}