syntax = "proto3";

package src.main.java.com.github.cyberpunkperson.retryer.router;

import "google/protobuf/timestamp.proto";


message RetryEntry {

  string application_name = 1;

  string group_id = 2;

  string topic = 3;

  int64 offset = 4;

  int32 partition = 5;

  google.protobuf.Timestamp timestamp = 6;

  bytes key = 7;

  bytes value = 8;

  Flow flow = 9;

  int32 delivery_attempt = 10;

  google.protobuf.Timestamp error_timestamp = 11;

  string error_message = 12;


  enum Flow {
    DEFAULT = 0;
  }
}

